initial import smile.plot.vega for java